--- a/feiDemo/app/build.gradle
+++ b/feiDemo/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.fei.demo"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -52,15 +52,15 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    compile 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    compile 'org.xutils:xutils:3.5.0'
+    implementation 'org.xutils:xutils:3.5.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile 'com.amap.api:3dmap:6.2.0'
+    implementation 'com.amap.api:3dmap:6.2.0'
     implementation project(':qrcodelibrary')
     implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.2.5'
 }
