--- a/feiDemo/app/src/main/AndroidManifest.xml
+++ b/feiDemo/app/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@
         <activity android:name=".activity.BindCameraActivity"/>
         <activity android:name=".activity.OtaTestActivity"/>
         <activity android:name=".activity.ThreadActivity"/>
+        <activity android:name=".activity.GMapActivity"/>
+        <activity android:name=".activity.WIFIActivity"/>
+
         <activity android:name=".module.startpage.QRcodeActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".module.startpage.QRcodeZbarActivity"
@@ -78,7 +81,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".module.startpage.RemoteControlConnectListActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
-        <activity android:name=".activity.GMapActivity"/>
+
     </application>
 
 </manifest>
