--- a/feiDemo/app/build.gradle
+++ b/feiDemo/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation 'com.amap.api:3dmap:6.2.0'
     implementation project(':qrcodelibrary')
     implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.2.5'
+    implementation 'commons-net:commons-net:3.6'
 }
