change android support to androidx.

--- a/feiDemo/app/src/main/AndroidManifest.xml
+++ b/feiDemo/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".activity.ThreadActivity"/>
         <activity android:name=".activity.GMapActivity"/>
         <activity android:name=".activity.WIFIActivity"/>
+        <activity android:name=".activity.AndroidxActivity"/>
 
         <activity android:name=".module.startpage.QRcodeActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
