--- a/feiDemo/app/build.gradle
+++ b/feiDemo/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
@@ -64,4 +65,10 @@ dependencies {
     implementation project(':qrcodelibrary')
     implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.2.5'
     implementation 'commons-net:commons-net:3.6'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    mavenCentral()
 }
