--- a/feiDemo/app/build.gradle
+++ b/feiDemo/app/build.gradle
@@ -34,6 +34,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 
 //    splits {
 //        abi {
