update so build.

--- a/feiDemo/app/CMakeLists.txt
+++ b/feiDemo/app/CMakeLists.txt
@@ -9,17 +9,18 @@ cmake_minimum_required(VERSION 3.4.1)
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
+# so的路径在build——>intermediates——>cmake下
 
 add_library( # Sets the name of the library.
-             #native-lib
-              uart-lib
+             native-lib
+            #uart-lib
 
              # Sets the library as a shared library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             # src/main/cpp/native-lib.cpp )
-              src/main/cpp/uart-lib.cpp )
+              src/main/cpp/native-lib.cpp )
+            #src/main/cpp/uart-lib.cpp )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -39,7 +40,8 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       uart-lib
+                        native-lib
+                       # uart-lib
 
                        # Links the target library to the log library
                        # included in the NDK.
