--- a/feiDemo/app/build.gradle
+++ b/feiDemo/app/build.gradle
@@ -16,6 +16,8 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ""
+                //默认情况下，cmake 会输出 4 种 ABI（"armeabi-v7a" , "arm64-v8a", "x86", "x86_64"）
+                abiFilters  "armeabi-v7a" , "arm64-v8a",  "x86_64"
             }
         }
     }
@@ -31,8 +33,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     testOptions {
         unitTests.returnDefaultValues = true
@@ -72,8 +74,8 @@ dependencies {
     implementation project(':qrcodelibrary')
     implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.2.5'
     implementation 'commons-net:commons-net:3.6'
-    implementation "androidx.core:core-ktx:+"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
